--- a/HiGHS-testing/Hangs/HiGHS-hangs.ipynb
+++ b/HiGHS-testing/Hangs/HiGHS-hangs.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "# Get data\n",
     "\n",
-    "DataFilename = os.path.join('.', 'Data-100.json')\n",
+    "DataFilename = os.path.join('.', 'data-100.json')\n",
     "with open(DataFilename, 'r') as f:\n",
     "    Data = json.load(f)"
    ]
